package seedu.bookbuddy.parser.parservalidation;

public class CommandList {
    public static final String ADD_COMMAND = "add";
    public static final String REMOVE_COMMAND = "remove";
    public static final String LIST_COMMAND = "list";
    public static final String MARK_COMMAND = "mark";
    public static final String UNMARK_COMMAND = "unmark";
    public static final String HELP_COMMAND = "help";
    public static final String FIND_TITLE_COMMAND = "find-title";
    public static final String FIND_GENRE_COMMAND = "find-genre";
    public static final String FIND_READ_COMMAND = "find-read";
    public static final String FIND_UNREAD_COMMAND = "find-unread";
    public static final String FIND_LABEL_COMMAND = "find-label";
    public static final String FIND_RATE_COMMAND = "find-rate";
    public static final String FIND_AUTHOR_COMMAND = "find-author";
    public static final String LABEL_COMMAND = "label";
    public static final String GENRE_COMMAND = "set-genre";
    public static final String SUMMARY_COMMAND = "give-summary";
    public static final String DISPLAY_COMMAND = "display";
    public static final String RATING_COMMAND = "rate";
    public static final String PRINT_ORDERED_COMMAND = "list-rated";
    public static final String PRINT_ORDERED_DATE_COMMAND = "list-by-date";
    public static final String AUTHOR_COMMAND = "set-author";
}
